# Interact-UI-Agent

./: .dockerignore  .env.docker.example  .gitignore  DOCKER.md  Makefile  README.md  TEST_DOCKER.md  docker-compose.prod.yml  docker-compose.yml
client/: .gitignore  package.json  vite.config.ts
client/src/: App.tsx  index.css  main.tsx
client/src/components/: index.ts
client/src/hooks/: index.ts  useAppInitialization.ts  useAuth.tsx  useDashboard.ts  useMCPListener.ts  useNotifications.tsx  useProducts.ts  useProfile.ts  useSearch.ts  useToast.ts  useUtils.ts  useWebSocket.ts
client/src/pages/: DashboardPage.tsx  NotificationsPage.tsx  PlaceholderPages.tsx  ProductDetailPage.tsx  ProductFormPage.tsx  ProductsPage.tsx  ProfilePage.tsx  SearchPage.tsx  index.ts
client/src/services/: api.ts  authService.ts  index.ts  mcpHandler.ts  notificationService.tsx  productService.ts  websocket.ts
client/src/store/: appStore.ts  authStore.ts  index.ts  productStore.ts
client/src/types/: api.ts  auth.ts  index.ts  mcp.ts  notification.ts  product.ts
client/src/utils/: appInitialization.ts  constants.ts  index.ts  mcpManager.ts
mcp_server/: config.py  main.py  websocket_manager.py
rust-mcp-server/: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md
rust-mcp-server/src/: main.rs
rust-mcp-server/src/agent/: executor.rs  llm_client.rs  mod.rs  prompt.rs
rust-mcp-server/src/api/: handlers.rs  mod.rs  routes.rs  state.rs
rust-mcp-server/src/auth/: jwt.rs  middleware.rs
rust-mcp-server/src/browser/: automation.rs  context_extractor.rs  mod.rs
rust-mcp-server/src/models/: action.rs  context.rs  mod.rs  session.rs
rust-mcp-server/src/session/: manager.rs  mod.rs  redis_store.rs
server/: .env.example  alembic.ini  main.py  models.py  tmp.ipynb
server/agent/: __init__.py  factory.py  mcp_client.py
server/auth/: __init__.py  models.py  routes.py  schemas.py  service.py  utils.py
server/core/: __init__.py  config.py  security.py
server/database/: __init__.py  base.py  session.py
server/notifications/: __init__.py  models.py  routes.py  schemas.py  service.py
server/products/: __init__.py  models.py  routes.py  schemas.py  service.py
solidjs-demo-app/: .dockerignore  .env.example  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json
solidjs-demo-app/src/: App.css  App.tsx
solidjs-demo-app/src/components/: RouterTrigger.tsx
solidjs-demo-app/src/pages/: About.tsx  Home.tsx  Products.tsx  (+1 more)
(+38 files in other folders)
