[package]
name = "mcp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Browser automation
chromiumoxide = { version = "0.7", features = ["tokio-runtime"] }
futures = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async traits
async-trait = "0.1"

# UUID for session IDs
uuid = { version = "1.10", features = ["v4", "serde"] }

# Tracing and logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP client (for future LLM calls)
reqwest = { version = "0.12", features = ["json"] }

# Environment variables
dotenv = "0.15"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# For session storage (we'll use in-memory first, Redis later)
dashmap = "6.0"

[dev-dependencies]
# Testing
tokio-test = "0.4"
